2007-02-22  Werner Koch  <wk@g10code.com>

	* configure.ac: New option --enable-random-daemon.
	Create versioninfo.rc and provide the build information.

2007-02-21  Werner Koch  <wk@g10code.com>

	* Makefile.am, configure.ac: Ignore w32-dll/

2007-02-20  Werner Koch  <wk@g10code.com>

	* configure.ac: Bump LT version to C14/A3/R0 in preparation for a
	release.
	
	* autogen.sh: Add option --force.
	* configure.ac: New option --disable-endian-check.  Use a real
	noexecstack test instead of requiring an option.  Add SVN version
	magic.

2007-02-02  Werner Koch  <wk@g10code.com>

	* configure.ac (FALLBACK_SOCKLEN_T): Special case for mingw32.

2006-11-15  Werner Koch  <wk@g10code.com>

	* autogen.sh: Add convenience option --build-amd64.

2006-10-20  Werner Koch  <wk@g10code.com>

	* Makefile.am (stowinstall): New convenience target.

2006-10-12  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac (FALLBACK_SOCKLEN_T): Third time is a charm.
	Define gcry_socklen_t, to avoid conflicts with socklen_t
	definitions by autoconf.

2006-10-11  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac (FALLBACK_SOCKLEN_T): Rewrite in terms of
	socklen.m4.

2006-10-11  Marcus Brinkmann  <marcus@g10code.de>

	* acinclude.m4 (GNUPG_FIX_HDR_VERSION): Removed.
	* configure.ac: Do not call GNUPG_FIX_HDR_VERSION.

2006-10-10  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Invoke AC_CHECK_SOCKLEN_TYPE.
	(AC_CONFIG_FILES): Add src/gcrypt.h.
	(AC_CONFIG_SRCDIR): Change to src/libgcrypt.vers.

2006-10-02  Werner Koch  <wk@g10code.com>

	* acinclude.m4 (GNUPG_SYS_SYMBOL_UNDERSCORE): Test on HOST and not
	TARGET.  Hardwire for mingw32. Allow setting via command line when
	cross compiling.

2006-08-29  Werner Koch  <wk@g10code.com>

	* configure.ac (USE_SEED): New.

2006-07-26  Werner Koch  <wk@g10code.com>

	* configure.ac: New options --enable-noexecstack and
	--disable-optimization. 

2006-07-04  Marcus Brinkmann  <marcus@g10code.de>
