@@ -79,6 +79,7 @@ Michael Roth		   mroth@nessie.de
 Michael Sobolev 	   mss@despair.transas.com
 Michele Baldessari	   michele@pupazzo.org
 Modestas Vainius	   geromanas@mailas.com
+Neil Dunbar                neil.dunbar at pobox.com
 Neil Spring		   nspring@cs.washington.edu
 Newton Hammet              newton@hammet.net
 Nicolas Graner		   Nicolas.Graner@cri.u-psud.fr
