@@ -1,5 +1,7 @@
 2007-02-22  Werner Koch  <wk@g10code.com>
 
+	* basic.c (check_pubkey_sign): Also try signing using an OID.
+
 	* Makefile.am (TESTS) [W32]: Removed pkbench for now.
 	* pkbench.c (benchmark): Fixed for W32.
 
