@@ -1,11 +1,14 @@
 2007-02-22  Werner Koch  <wk@g10code.com>
 
+	* Makefile.am (DISTCHECK_CONFIGURE_FLAGS): Use
+	--enable-random-daemon.
+
 	* configure.ac: New option --enable-random-daemon.
 	Create versioninfo.rc and provide the build information.
 
 2007-02-21  Werner Koch  <wk@g10code.com>
 
-	* Makefile.am, configure.ac: Ignore w32-dll/
+	* Makefile.am, configure.ac: Ignore w32-dll/.
 
 2007-02-20  Werner Koch  <wk@g10code.com>
 
